Squashed commit of the following:
commit 28c4970e55792f4361abcc2a654681258ba67c68
Author: Caio Souza <ocaiomoises@gmail.com>
Date:   Fri Apr 18 12:16:53 2025 -0300

    Criado: FindOrCreate UnitPerPack

commit 3274f3cf57d5110b5713dfe662d289fba7f40122
Author: Caio Souza <ocaiomoises@gmail.com>
Date:   Fri Apr 18 10:22:18 2025 -0300

    Atualizado: ProductMapper

commit 0b11c31ed669a1b2de43022ec13dff39901ecf2f
Author: Caio Souza <ocaiomoises@gmail.com>
Date:   Fri Apr 18 10:14:52 2025 -0300

    Atualizados: DTOs

commit 8f1f5446c942d3e48b01f186c27a028f46a5564c
Author: Caio Souza <ocaiomoises@gmail.com>
Date:   Fri Apr 18 10:08:21 2025 -0300

    Criado: UnitsPerPackVariation